--- a/pull/wrangler.toml
+++ b/pull/wrangler.toml
@@ -5,6 +5,7 @@ compatibility_date = "2024-01-01"
 [vars]
 REGISTRY_SERVICE = "localhost:5000"
 REGISTRY_TOKEN_REALM = "http://localhost:5000/v2/token"
+REGISTRY_JWKS_URL = "http://localhost:5000/.well-known/jwks.json"
 
 [[r2_buckets]]
 binding = "BUCKET"
